fix: complete notification delivery chat gating and workshop icon